Fixing styling, removing tailwind due to too much redundancy

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -3,3 +3,6 @@
     transition: 0.3s;
     border-radius: 5px; /* 5px rounded corners */
 }
+.container {
+    padding: 2px 16px;
+}
